# nymph

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  NymphConfig.cmake.in  README.md  TestPyNymph.py  index.html  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yaml
Cpp/Executables/Main/: CMakeLists.txt  ConfigCheck.cc  Nymph.cc  NymphEXE.cc  Nymph_Exe.cc  test.yaml
Cpp/Executables/Validation/: CMakeLists.txt  DataTest.cc  KTTestCuts.hh  KTTestProcessor.cc  TestCut.cc  TestCutFilter.cc  TestCuts.cc  TestCuts.hh  TestData.cc  TestData.hh  TestParamBindings.py  TestProcessorToolbox2Threads.cc  TestPyTestClass.py
Cpp/Executables_v1/Main/: CMakeLists.txt
Cpp/Executables_v1/Validation/: KTJSONReader.hh  KTPyTestClass.cc  KTPyTestClass.hh  KTTestData.hh  KTTestDataPrimaryProcessor.cc  KTTestPrimaryProcessor.cc  TestCut.cc  TestPrimaryProcessorNoThreading.cc  TestSignalsAndSlots.cc  TestWrapProcessor.py
Cpp/Library_v1/: NymphPybind.cc
Cpp/Library_v1/Application/: KTApplication.cc  KTCommandLineHandler.cc  KTConfigurator.cc  KTDataQueueProcessor.cc  KTPrintDataStructure.cc  KTProcessorToolbox.hh  KTProcessorToolboxPybind.hh  KTRunNymph.cc  KTRunNymph.hh  KTThroughputProfiler.hh
Cpp/Library_v1/Data/: KTApplyCut.cc  KTCoreData.cc  KTCoreData.hh  KTCutFilter.cc  KTCutFilter.hh  KTData.hh
Cpp/Library_v1/IO/: KTReader.cc  KTWriter.hh
Cpp/Library_v1/Processor/: KTNymphSlot.hh  KTPrimaryProcessor.cc  KTPrimaryProcessor.hh  KTProcessor.cc  KTProcessor.hh  KTProcessorPybind.hh  KTPyProcessor.hh  KTSignal.hh  KTSignalSlotBase.hh  KTSignalWrapper.hh  KTSlotWrapper.cc
Cpp/Library_v1/Utility/: KTCacheDirectory.hh  KTConfigurablePybind.hh  KTEventLoop.cc  KTException.cc  KTException.hh  KTExtensible.hh  KTExtensibleStruct.hh  KTExtensibleStructFactory.hh  KTLogger.hh  KTMemberVariable.hh  KTTIFactory.hh
Cpp/Templates/: KTProcessorTemplate.cc
Documentation/: Doxyfile  _index.rst  conf.py  index.rst
Examples/ROOT/: Setup.C
Excecutables/Validation/: TestApplyCut.cc
Executables/Demos/: CMakeLists.txt  Return.cc
Executables/Main/: CMakeLists.txt  Katydid.cc  Nymph.cc
Executables/Validation/: CMakeLists.txt  KTExtTest.cc  KTExtTest.hh  KTJSONReader.cc  KTJSONReader.hh  KTJSONTypeWriterValidation.cc  KTJSONTypeWriterValidation.hh  KTJSONWriter.cc  KTJSONWriter.hh  KTJSONWriterValidation.cc  KTJSONWriterValidation.hh  KTPyTestClassPybind.hh  KTRegisterNymphValidationExtData.hh  KTSerialWriter.cc  KTSerialWriter.hh  KTTestConfigurable.cc  KTTestConfigurable.hh  KTTestCuts.cc  KTTestCuts.hh  KTTestData.cc  KTTestData.hh  KTTestDataPrimaryProcessor.cc  KTTestDataPrimaryProcessor.hh  KTTestPrimaryProcessor.cc  KTTestPrimaryProcessor.hh  KTTestProcessor.cc  KTTestProcessor.hh  NymphValidationPy.cc  NymphValidationPybind.cc  TestApplication.cc  TestApplyCut.cc  TestCacheDirectory.cc  TestConfigurator.cc  TestCut.cc  TestCutFilter.cc  TestData.cc  TestExceptionInSlot.cc  TestExt.cc  TestExtDataSerialization.cc  TestExtSerialization.cc  (+27 more)
Executables_v1/Validation/: KTTestPrimaryProcessor.hh  TestExt.cc
Library_v1/: CMakeLists.txt
Library_v1/Application/: KTApplication.cc  KTCommandLineHandler.cc  KTConfigurator.cc  KTRunNymph.cc
Library_v1/Data/: KTTester.hh
Library_v1/IO/: KTJSONWriter.hh
Library_v1/Utility/: KTConfigurable.cc
Python/: CMakeLists.txt  README.md
Python/Bindings/: CMakeLists.txt  NymphBindingHelpers.hh  NymphPybind.cc
Python/Bindings/Control/: ControllerPybind.hh
Python/Bindings/Data/: DataFramePybind.hh  DataPybind.hh
Python/Bindings/Processor/: ProcessorPybind.hh  ProcessorRegistrar.hh  ProcessorToolboxPybind.hh  PyProcCreatorPybind.hh  SignalPybind.hh  SignalSlotBasePybind.hh  SlotPybind.hh
Python/nymph/: Signal.py  Slot.py  __init__.py  nymph_pybind_template.cc  nymph_pybind_template.hh
Src/Cpp/Executables_v1/Validation/: KTTestProcessor.hh
Src/Cpp/Library_v1/: CMakeLists.txt
Src/Cpp/Library_v1/Data/: KTTester.cc
Src/Cpp/Library_v1/IO/: KTReader.hh
Src/Python/: CMakeLists.txt
Src/Scarab/: CMakeLists.txt
Templates/: KTProcessorTemplate.cc  KTProcessorTemplate.hh
Testing/: CMakeLists.txt  README.md  TestControlAccess.cc  TestController.cc  TestDataClasses.hh  TestDataFrame.cc  TestDataProcessorClasses.hh  TestException.cc  TestExt.cc  TestPrimaryProcessor.cc  TestProc.hh  TestProcessor.cc  TestProcessorClasses.hh  TestProcessorToolbox.cc  TestRunNymph.cc  TestSignalSlot.cc  TestSingleRunController.cc  TestSlotData.cc
Testing/Cpp/: TestConfigException.cc  TestControlAccess.cc  TestController.cc  TestControllerClasses.hh  TestCut.cc  TestCutBen.cc  TestData.cc  TestDataClasses.hh  TestDataFrame.cc  TestDataProcessorClasses.hh  TestException.cc  TestPrimaryProcessor.cc  TestProcessor.cc  TestProcessorClasses.cc  TestProcessorClasses.hh  TestProcessorToolbox.cc  TestReturnBuffer.cc  TestService.cc  TestServiceClasses.cc  TestServiceClasses.hh  TestServiceToolbox.cc  TestSignalSlot.cc  TestSingleRunController.cc  TestSlotData.cc
Testing/Python/: TestControlAccess.py  TestData.py  TestDataMethods.py  test_data_methods.py  testchain.py  testcontroller.py  testdata.py  testdataframe.py  testprocessor.py  testprocessor_decorator.py  testprocessor_slot.py  testprocessortoolbox.py  testsignal.py
Testing/Python/Bindings/: CMakeLists.txt  NymphTestingPybind.cc  TestDataClassesPybind.hh
Testing/cpp/: CMakeLists.txt  TestData.cc  TestDataClasses.hh  TestProcessorToolbox.cc
Testing/cpp/Validation/: CMakeLists.txt  TestApplyCut.cc
Testing/python/: CMakeLists.txt
Tests/: CMakeLists.txt  TestPrintData.cc
cmake/: Nymph.cmake  PythonPackage.cmake
cpp/Executables/: CMakeLists.txt
cpp/Executables/Validation/: KTTestProcessor.hh
cpp/Executables_v1/Validation/: CMakeLists.txt  TestPythonBasics.hh
cpp/Library_v1/Application/: KTConfigurator.hh
cpp/Library_v1/Data/: KTCutResult.hh
cpp/Library_v1/Processor/: KTNymphSignals.hh
python/nymph/: CMakeLists.txt  KTProcessorToolboxPy.hh  __init__.py
