[metadata]
name = nymph
version = 2.0.0
author = Project 8

description = A C++/python based data analysis framework.
long_description = file: README.md 
url = https://github.com/project8/nymph
classsifiers = 
    License :: Other/Proprietary License
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python

[options]
package_dir =
    = Python
packages = find:
python_requiires = >= 3.6

[options.packages.find]
where = Python