[metadata]
name = nymph
version = 2.0.0
author = Project 8
author_email = project8xperiment@gmail.com
description = A C++/python based data analysis framework.
long_description = file: README.md 
url = https://github.com/project8/nymph
classifiers = 
    License :: Other/Proprietary License
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python

[options]
zip_safe = False
package_dir =
    = Src/Python
packages = find:
python_requires = >=3.6

[options.packages.find]
where = Src/Python